[metadata]
name = stactools-usda-cdl
version = attr: stactools.usda_cdl.__version__
description = stactools package for USDA Cropland Data Layer
long_description = file: README.md
long_description_content_type = text/markdown
author = Paola Holleway 
author_email = paolaholleway@gmail.com
url = https://github.com/stactools-packages/usda-cdl
project_urls =
    Issues = https://github.com/stactools-packages/usda-cdl/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.3.1

[options.packages.find]
where = src
